# cppa-weblate-plugin

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Boost Weblate Plugin Refactor — Plan.md  README.md  REUSE.toml  pyproject.toml  settings-override.py
.github/: README.md
.github/workflows/: cd.yml  ci-combination-auth.yml  ci-combination-functional.yml  ci-combination-smoke.yml  ci-dependencies.yml  ci-lint.yml  ci-package.yml  ci-test.yml  ci.yml  dep-audit.yml  deploy.yml  lint-and-format.yml  promote-main.yml  release.yml  weblate-pin-bump.yml
docker/: README.md  docker-compose.cd.yml  docker-compose.ci.yml
docs/: boost-endpoint-api.md  boost-weblate-plugin-refactor-plan.md  deployment-runbook.md
issues/: cd-workflow-deploy-yml.md  docs-deployment-runbook-md.md  readme-completion.md
scripts/: bump-weblate-version.sh  check-weblate-pin-sync.sh  integration-functional.sh  weblate-version-map.sh
src/boost_weblate/: __init__.py  settings_override.py
src/boost_weblate/formats/: __init__.py  quickbook.py
tests/endpoint/: test_endpoint.py  test_services.py
tests/formats/: test_quickbook.py
tests/integration/: test_functional.py
tests/integration/lib/: gh_repo.py
tests/utils/: test_quickbook.py
