# SPDX-FileCopyrightText: 2026 Andrew Zhang <whisper67265@outlook.com>
#
# SPDX-License-Identifier: BSL-1.0

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.18,<0.12.0"]

[dependency-groups]
dev = [
  {include-group = "lint"}
]
lint = [
  {include-group = "pre-commit"}
]
pre-commit = [
  "prek==0.3.13"
]

[project]
authors = [
  {name = "Andrew Zhang", email = "whisper67265@outlook.com"}
]
classifiers = [
  "Environment :: Web Environment",
  "License :: OSI Approved :: Boost Software License 1.0 (BSL-1.0)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Localization"
]
dependencies = [
  "Weblate"
]
description = "Standalone Weblate plugin for Boost documentation translation."
keywords = [
  "boost",
  "gettext",
  "i18n",
  "l10n",
  "quickbook",
  "translation",
  "weblate"
]
license = "BSL-1.0"
license-files = ["LICENSE"]
name = "cppa-weblate-plugin"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/cppalliance/cppa-weblate-plugin"
Issues = "https://github.com/cppalliance/cppa-weblate-plugin/issues"
Repository = "https://github.com/cppalliance/cppa-weblate-plugin"

[tool.check-manifest]
ignore = [
  "*.yaml",
  "*.yml",
  ".editorconfig"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.uv.build-backend]
module-name = "boost_weblate"
module-root = "src"
source-include = [
  "docs/**",
  "LICENSES/**",
  "REUSE.toml",
  "uv.lock",
  "settings-override.py"
]
